# mta-v500

./: .dockerignore  .gitignore  .npmrc  Dockerfile.database  Dockerfile.fastapi  Dockerfile.fastify  Dockerfile.pnpm  Dockerfile.python  Dockerfile.static-apps  Dockerfile.static-apps-integration-test  Makefile  Makefile.Alembic  Makefile.create-project  Makefile.database  Makefile.docker  Makefile.fastapi  Makefile.fastify  Makefile.frontend-copy  Makefile.npm  Makefile.nx  Makefile.pnpm  Makefile.static-apps  Makefile.vite  README.md  biome.json  dev-setup.sh  docker-compose.yml  fixed-versions.jsonl  installed-versions.jsonl  package-lock.json  package.json  package.json.backup  pnpm-lock.yaml  pnpm-workspace.yaml  poetry.Makefile  poetry.mdx  pyproject.toml  test-cors.mjs  test_auth.sh  tsconfig.json  (+1 more)
.bin/: README.md  claude-symlink.sh  clean-port-3000.sh  clean-port-8080.sh  copy-frontend-dist.mjs  del-package-lock.sh  dev-parallel.sh  dist-copy-frontend-folders.sh  docker-force-stop.sh  gen-dockerfile-copy-frontend.mjs  git-hard-reset.sh  md-cleanup.sh  merge-copy.sh  npm-copy-all-workspaces-pkg.mjs  npm-lock-to-fixed-versions.mjs  npm-pkg-lock-platform.js  npm-pkg-lock-platform.mjs  pip-requirement-install.sh  poetry-to-requirement.sh  toml-remove-readme.sh
.github/scripts/: build_matrix.md  build_matrix.py
.github/workflows/: _reusable-build-deploy.yaml  _reusable-lint.yaml  cicd.yaml
__BACKUP__/: Makefile.fastapi-apps
__PLAY__/app-ask-ai/: playwright.config.ts
ci-config/npm-pkg-versions-installed/: rules.json
common/config/: cors.json  (+1 more)
db-init/: README.md
fastapi-apps/app-aws-s3-files/: Makefile  alembic.ini  package.json  pyproject.toml
fastapi-apps/app-aws-s3-files/alembic/: README  env.py
fastapi-apps/app-aws-s3-files/app/: exceptions.py
fastapi-apps/app-aws-s3-files/app/routes/: __init__.py  health.py
fastapi-apps/app-aws-s3-files/app/services/: __init__.py
fastapi-apps/app-aws-s3-files/frontend/: package.json  project.json
fastapi-apps/app-aws-s3-files/frontend/src/: App.jsx  main.jsx
fastapi-apps/app-aws-s3-files/frontend/src/components/: BucketCard.jsx  CreateBucketModal.jsx  ErrorBoundary.jsx  FileGalleryCard.jsx  FileListView.jsx  FileUpload.jsx  Modal.jsx
fastapi-apps/app-aws-s3-files/frontend/src/hooks/: useIntersectionObserver.js
fastapi-apps/app-aws-s3-files/frontend/src/styles/: index.css
fastapi-apps/app-aws-s3-files/frontend/src/utils/: fileUtils.js
fastapi-apps/app-aws-s3-files/middleware/: error_handlers.py  logging.py  rate_limit.py  security.py
fastapi-apps/app-aws-s3-files/models/: __init__.py
fastapi-apps/app-aws-s3-files/routers/: buckets.py
fastapi-apps/app-aws-s3-files/tests/: test_health.py  test_migration.py
fastapi-apps/app-hello/: pyproject.toml
fastapi-apps/app-hello/app/: main.py
fastapi-apps/app_ai_sdk_chat/: Makefile  README.md  gunicorn.conf.py  pyproject.toml
fastapi-apps/app_ai_sdk_chat/alembic/: README  env.py
fastapi-apps/app_ai_sdk_chat/alembic/versions/: .gitkeep
fastapi-apps/app_ai_sdk_chat/app/: __init__.py  ai_sdk_models.py  config.py  exceptions.py  get_api_key.py  main.py
fastapi-apps/app_ai_sdk_chat/app/middleware/: error_handler.py
fastapi-apps/app_ai_sdk_chat/app/models/: __init__.py
fastapi-apps/app_ai_sdk_chat/app/routes/: __init__.py  chat.py  health.py
fastapi-apps/app_ai_sdk_chat/app/schemas/: chat.py
fastapi-apps/app_ai_sdk_chat/app/services/: __init__.py  ai_provider.py  stream_service.py
fastapi-apps/app_ai_sdk_chat/app/utils/: datetime_utils.py  id_generator.py
fastapi-apps/app_ai_sdk_chat/frontend/: index.html  package.json  project.json  vite.config.js  vite.config.ts
fastapi-apps/app_ai_sdk_chat/frontend/src/: App.tsx  api.ts
fastapi-apps/app_ai_sdk_chat/frontend/src/types/: index.ts
fastify-apps/: README.md
packages-py/figma_api/: README.md  pyproject.toml  setup.py
packages-py/figma_api/src/figma_api/: client.py  models.py
packages-py/figma_api/src/figma_api/comments/: __init__.py
packages-py/figma_api/src/figma_api/components/: __init__.py  models.py  sdk.py
packages-py/figma_api/src/figma_api/dev_resources/: sdk.py
packages-py/figma_api/src/figma_api/projects/: __init__.py
packages-py/figma_api/src/figma_api/variables/: models.py
packages-py/figma_api/src/figma_api/webhooks/: sdk.py
packages-py/figma_api/tests/: __init__.py  conftest.py
packages-py/figma_api/tests/integration/: test_real_api.py
packages-py/figma_api/tests/unit/: test_client.py  test_comments_api.py
packages-py/google_gemini_openai_client/: README.md  pyproject.toml  setup.py
packages-py/google_gemini_openai_client/src/google_gemini_openai_client/: __init__.py  chat.py  client.py  config.py  models.py  utils.py
packages-py/jira_api/: README.md  pyproject.toml  setup.py
packages-py/jira_api/src/jira_api/: exceptions.py  models.py
packages-py/jira_api/src/jira_api/issues/: __init__.py  sdk.py
packages-py/jira_api/src/jira_api/projects/: __init__.py  models.py  sdk.py
packages-py/jira_api/src/jira_api/users/: __init__.py  models.py  sdk.py
packages-py/postgres_db/: README.md  pyproject.toml  setup.py
packages-py/postgres_db/examples/: basic_usage.py
packages-py/postgres_db/postgres_db/: __init__.py  connection.py  errors.py  types.py
packages-py/postgres_db/postgres_db/fastapi/: __init__.py  dependencies.py  lifespan.py
packages-py/static_server/: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
packages-py/static_server/examples/: basic_usage.py  integration_example.py
packages-py/static_server/static_server/: __init__.py  fastapi.py
packages-py/static_server/tests/: test_fastapi.py
sample/google_compatiable_openai_httpx/: ex-001.py  ex-1000.py  ex-20.py  ex-200.py  ex-30.py  ex-300.py  ex-31.py  ex-32.py  ex-33.py  ex-400.py  ex-500.py  ex-600.py  ex-700.py  ex-800.py  ex-900.py  pyproject.toml
sample/google_compatiable_openai_py/: gemini_client.py  pyproject.toml
scripts/: ensure-rollup-binary.mjs
static/: test-esm-mime-types.html
tests/: test_hello.py  test_s3_integration.py  test_secret_parser.py
(+1056 files in other folders)
