[tool.poetry]
name = "app-ai-sdk-chat"
version = "1.0.0"
description = "FastAPI AI SDK Chat - Streaming chat with OpenAI-compatible APIs"
authors = ["Developer"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
gunicorn = "^23.0.0"
python-multipart = "^0.0.12"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
httpx = {extras = ["http2"], version = "^0.28.0"}
nanoid = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
ruff = "^0.8.0"
mypy = "^1.5.0"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
