[tool.poetry]
name = "figma_api"
version = "1.0.0"
description = "Unified Python SDK for Figma API - Simplified interface for FastAPI integration"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "figma_api", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
httpx = ">=0.27.0"
pydantic = ">=2.7.0"
tenacity = ">=8.2.3"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-asyncio = ">=0.23.0"
pytest-cov = ">=5.0.0"
mypy = ">=1.8.0"
ruff = ">=0.3.0"
black = ">=24.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--cov=figma_api --cov-report=term-missing --cov-report=html"

[tool.mypy]
python_version = "3.8"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
