[tool.poetry]
name = "google_gemini_openai_client"
version = "1.0.0"
description = "Google Gemini OpenAI-compatible REST API client with proxy and structured output support"
authors = []
readme = "README.md"
license = "MIT"
packages = [{include = "google_gemini_openai_client", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.28.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
mypy = "^1.8.0"
ruff = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.9"
strict = false

[tool.ruff]
line-length = 100
target-version = "py39"
