[tool.poetry]
name = "static-server"
version = "0.1.0"
description = "FastAPI static file server for multiple frontend dist directories"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "static_server"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
httpx = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
